[package]
name = "learn-rust"
version = "0.1.0"
authors = ["Preyas Shah <preyastshah@gmail.com"]
edition = "2024"

[dependencies]
log = "0.4.10"
serde = { version = "1.0.104", features = ["derive"] }
reqwest = "0.11.3"

[dev-dependencies]
cargo-watch = "7.3.1"
rustfmt = "1.4.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3